--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Google Fonts: Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    <!-- Favicon: Wallet Icon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Patungan</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Google Fonts: Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Favicon: Wallet Icon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Patungan</title>
+  <meta name="description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
+  <meta name="author" content="Lovable" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- TODO: Update og:title to match your application name -->
+  <meta property="og:title" content="Patungan" />
+  <meta property="og:description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <style>
-      html,
-      body {
-        font-family: "Poppins", sans-serif;
-      }
-    </style>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Lovable" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <style>
+    html,
+    body {
+      font-family: "Poppins", sans-serif;
+    }
+  </style>
+</body>
+
 </html>
