--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <meta property="og:title" content="Patungan" />
   <meta property="og:description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:image" content="/favicon.svg" />
 
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta name="twitter:image" content="/favicon.svg" />
 </head>
 
 <body>
