feat: Add Apple PWA meta tags and apple-touch-icon, and update viewport settings to disable scaling.

--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <!-- Google Fonts: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <!-- Favicon: Wallet Icon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <!-- TODO: Set the document title to the name of your application -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Patungan" />
+
   <title>Patungan</title>
   <meta name="description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
   <meta name="author" content="Lovable" />
 
-  <!-- TODO: Update og:title to match your application name -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Patungan" />
   <meta property="og:description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="/favicon.svg" />
 
+  <!-- Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@Lovable" />
   <meta name="twitter:image" content="/favicon.svg" />
