feat: Introduce AI Assistant and Notes features, and update Open Graph, Twitter metadata, and README.

--- a/index.html
+++ b/index.html
@@ -16,18 +16,23 @@
 
   <title>Patungan</title>
   <meta name="description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
-  <meta name="author" content="Lovable" />
+  <meta name="author" content="Nexteam" />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Patungan" />
-  <meta property="og:description" content="Bagi tagihan dengan mudah • Pajak & Service otomatis" />
+  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/favicon.svg" />
+  <meta property="og:url" content="https://patungan.vercel.app/" />
+  <meta property="og:title" content="Patungan - Bagi Tagihan Jadi Mudah" />
+  <meta property="og:description"
+    content="Bagi tagihan dengan teman secara akurat. Hitung pajak & service otomatis. Support Catatan & AI Assistant." />
+  <meta property="og:image" content="/apple-touch-icon.png" />
 
   <!-- Twitter -->
-  <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@Lovable" />
-  <meta name="twitter:image" content="/favicon.svg" />
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://patungan.vercel.app/" />
+  <meta property="twitter:title" content="Patungan - Bagi Tagihan Jadi Mudah" />
+  <meta property="twitter:description"
+    content="Bagi tagihan dengan teman secara akurat. Hitung pajak & service otomatis. Support Catatan & AI Assistant." />
+  <meta property="twitter:image" content="/apple-touch-icon.png" />
 </head>
 
 <body>
